apps/smoke-echo/overlays/local/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-echo
spec:
  template:
    spec:
      containers:
        - name: echo
