apps/smoke-echo/overlays/local/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-echo
spec:
  replicas: 1
