apps/smoke-echo/overlays/local/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-echo
spec:
  template:
    spec:
      containers:
        - name: echo
          resources:
            requests:
              cpu: 24m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 100Mi
