apps/smoke-echo/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-echo
  labels:
    app.kubernetes.io/name: smoke-echo
    app.kubernetes.io/part-of: gitops-smoke
    platformone.io/owner: platform-engineering
spec:
  rules:
    - host: smoke-echo.platformone.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: smoke-echo
                port:
                  number: 80
